# libtirpc-lbx

./: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  clnt_internal.h
tirpc/rpc/: clnt.h  svc.h  xdr.h
